@@ -1,83 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor
-  license agreements. See the NOTICE file distributed with this work for additional
-  information regarding copyright ownership. The ASF licenses this file to
-  You under the Apache License, Version 2.0 (the "License"); you may not use
-  this file except in compliance with the License. You may obtain a copy of
-  the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
-  by applicable law or agreed to in writing, software distributed under the
-  License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
-  OF ANY KIND, either express or implied. See the License for the specific
-  language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one or more
+  ~ contributor license agreements.  See the NOTICE file distributed with
+  ~ this work for additional information regarding copyright ownership.
+  ~ The ASF licenses this file to you under the Apache License, Version 2.0
+  ~ (the "License"); you may not use this file except in compliance with
+  ~ the License.  You may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>flume-hadoop-parent</artifactId>
     <groupId>org.apache.flume</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <artifactId>flume-hadoop-parent</artifactId>
+    <version>${revision}</version>
   </parent>
-  <groupId>org.apache.flume</groupId>
   <artifactId>flume-kudu-sink</artifactId>
   <name>Flume Kudu Sink</name>
 
   <properties>
-    <exclude.tests>None</exclude.tests>
     <module.name>org.apache.flume.sink.kudu</module.name>
   </properties>
-
-  <build>
-    <extensions>
-      <!-- Used to find the right kudu-binary artifact with the Maven
-           property ${os.detected.classifier} -->
-      <extension>
-        <groupId>kr.motd.maven</groupId>
-        <artifactId>os-maven-plugin</artifactId>
-        <version>1.6.2</version>
-      </extension>
-    </extensions>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.avro</groupId>
-        <artifactId>avro-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>schema</goal>
-            </goals>
-            <configuration>
-              <testSourceDirectory>${basedir}/src/test/resources</testSourceDirectory>
-              <testIncludes>
-                <testInclude>**/*.avsc</testInclude>
-              </testIncludes>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>${exclude.tests}</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 
   <dependencies>
     <dependency>
@@ -118,29 +68,52 @@
 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-1.2-api</artifactId>
+      <artifactId>log4j-slf4j2-impl</artifactId>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.kudu</groupId>
       <artifactId>kudu-client</artifactId>
-      <version>${kudu.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.kudu</groupId>
       <artifactId>kudu-test-utils</artifactId>
-      <version>${kudu.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <!-- The Kudu test utilities install a fake DNS through reflection -->
+          <argLine>-Djava.net.preferIPv4Stack=true --add-opens java.base/java.net=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>schema</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <testSourceDirectory>${basedir}/src/test/resources</testSourceDirectory>
+              <testIncludes>
+                <testInclude>**/*.avsc</testInclude>
+              </testIncludes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
   <profiles>
     <profile>
@@ -152,7 +125,7 @@
       </activation>
       <properties>
         <!-- Kudu tests do not support Windows. -->
-        <exclude.tests>**/*.java</exclude.tests>
+        <test.exclude.pattern>**/*.java</test.exclude.pattern>
       </properties>
     </profile>
     <profile>
@@ -167,9 +140,7 @@
         <dependency>
           <groupId>org.apache.kudu</groupId>
           <artifactId>kudu-binary</artifactId>
-          <version>${kudu.version}</version>
           <classifier>${os.detected.classifier}</classifier>
-          <scope>test</scope>
         </dependency>
       </dependencies>
     </profile>
@@ -184,9 +155,7 @@
         <dependency>
           <groupId>org.apache.kudu</groupId>
           <artifactId>kudu-binary</artifactId>
-          <version>${kudu.version}</version>
           <classifier>${os.detected.classifier}</classifier>
-          <scope>test</scope>
         </dependency>
       </dependencies>
     </profile>
